syntax = "proto3";
package permos.permos;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "permos/permos/params.proto";

option go_package = "permos/x/permos/types";

// GenesisState defines the permos module's genesis state.
message GenesisState {
  // params defines all the parameters of the module.
  Params params = 1 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
}
