syntax = "proto3";

package permos.permos;

import "amino/amino.proto";
import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "permos/permos/params.proto";
import "permos/permos/permos.proto";

option go_package = "permos/x/permos/types";

// Msg defines the Msg service.
service Msg {
  option (cosmos.msg.v1.service) = true;
  
  // UpdateParams defines a (governance) operation for updating the module
  // parameters. The authority defaults to the x/gov module account.
  rpc UpdateParams (MsgUpdateParams) returns (MsgUpdateParamsResponse);
  rpc CreatePermos (MsgCreatePermos) returns (MsgCreatePermosResponse);
  rpc UpdatePermos (MsgUpdatePermos) returns (MsgUpdatePermosResponse);
  rpc DeletePermos (MsgDeletePermos) returns (MsgDeletePermosResponse);
}
// MsgUpdateParams is the Msg/UpdateParams request type.
message MsgUpdateParams {
  option (cosmos.msg.v1.signer) =                       "authority";
  option           (amino.name) = "permos/x/permos/MsgUpdateParams";
  
  // authority is the address that controls the module (defaults to x/gov unless overwritten).
  string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  
  // params defines the module parameters to update.
  
  // NOTE: All parameters must be supplied.
  Params params = 2 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

// MsgUpdateParamsResponse defines the response structure for executing a
// MsgUpdateParams message.
message MsgUpdateParamsResponse {}

message MsgCreatePermos {
  option (cosmos.msg.v1.signer) = "creator";
  string creator  = 1;
  string mypermos = 2;
}

message MsgCreatePermosResponse {
  uint64 id = 1;
}

message MsgUpdatePermos {
  option (cosmos.msg.v1.signer) = "creator";
  string creator  = 1;
  uint64 id       = 2;
  string mypermos = 3;
}

message MsgUpdatePermosResponse {}

message MsgDeletePermos {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1;
  uint64 id      = 2;
}

message MsgDeletePermosResponse {}

